<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lightning">Lightning</string>
    <string name="onChain">On-Chain</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="memo">Memo</string>
    <string name="shareDialogTitle">Choose App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="receive">Receive</string>
    <string name="optional">optional</string>
    <string name="next">Next</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="needHelp">Need help?</string>
    <string name="offline">offline</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="fee">Fee</string>
    <string name="confirmExit">Do you really want to quit BitBanana?</string>
    <string name="or">or</string>
    <string name="max_amount">Maximum Amount:</string>
    <string name="min_amount">Minimum Amount:</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="pay">Pay</string>
    <string name="date">Date</string>
    <string name="expiry">Expiry</string>
    <string name="expired">Expired</string>
    <string name="remaining">remaining</string>
    <string name="address">Address</string>
    <string name="transactionID">Transaction ID</string>
    <string name="channel">Channel</string>
    <string name="event">Event</string>
    <string name="preimage" translatable="false">Preimage</string>
    <string name="channel_event">Channel Event</string>
    <string name="scan_qr_code">Scan QR-Code</string>
    <string name="node">Node</string>
    <string name="amount_invalid">The amount is invalid.</string>
    <string name="success">Success</string>
    <string name="suggested_peers">Suggested Peers</string>
    <string name="none">None</string>
    <string name="install">Install</string>
    <string name="continue_string">Continue</string>
    <string name="withdraw">Withdraw</string>
    <string name="unknown">Unknown</string>
    <string name="scan">Scan</string>
    <string name="manually">Manually</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="contribute">Contribute</string>
    <string name="privacy">Privacy</string>
    <string name="payee">Payee</string>
    <string name="open">Open</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="navigation_settings">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_security">Security &amp; Privacy</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_pin_options">PIN Options</string>
    <string name="settings_btcUnit">Bitcoin Unit</string>
    <string name="settings_currency">Second Unit</string>
    <string name="settings_language">Language</string>
    <string name="settings_tor">Tor</string>
    <string name="settings_tor_summary">Anonymize all web traffic using the Tor network. This only affects things like fetching exchange rates or interacting with LNURL services. Whether or not Tor is used to connect to a node can be set for each node individually in its connection settings.</string>
    <string name="settings_scan_clipboard">Check clipboard</string>
    <string name="settings_scan_clipboard_summary">Automatically check clipboard for data BitBanana can handle.</string>
    <string name="settings_hapticPin">Haptic PIN Feedback</string>
    <string name="settings_payer_data">Payment identification</string>
    <string name="settings_scramblePin">Scramble PIN Screen</string>
    <string name="settings_preventScreenRecording">Prevent Screen Recording</string>
    <string name="settings_resetSecurityWarnings">Reset Security Warnings</string>
    <string name="settings_advanced_settings">Advanced Settings</string>
    <string name="settings_enableBiometrics">Enable biometric authentication</string>
    <string name="settings_hideBalance">Hide balance</string>
    <string name="settings_addPin">Protect with PIN</string>
    <string name="settings_lockScreenTimeout">Auto-Lock Timeout</string>
    <string name="settings_lockScreenTimeout_description">Delay before BitBanana locks after the app is minimized.</string>
    <string name="settings_add_password">Protect with password</string>
    <string name="settings_blockExplorer">Block Explorer</string>
    <string name="settings_customBlockExplorer_host_description">Please provide the host address for your custom explorer. When you host the block explorer yourself, your privacy is fully maintained.</string>
    <string name="settings_customBlockExplorer_address_suffix">Address Suffix</string>
    <string name="settings_customBlockExplorer_address_suffix_description">When querying an address in the explorer, the link to be invoked will be as follows:\nHost + Address Suffix + Address.</string>
    <string name="settings_customBlockExplorer_transaction_suffix">Transaction Suffix</string>
    <string name="settings_customBlockExplorer_transaction_suffix_description">When querying a transaction in the explorer, the link to be invoked will be as follows:\nHost + Transaction Suffix + TransactionID.</string>
    <string name="settings_custom_block_explorer">Custom Block Explorer</string>
    <string name="settings_addressType">Bitcoin Address Type</string>
    <string name="settings_showHelpButtons">Show info buttons</string>
    <string name="settings_featureHelpButtons_summary">The handy ? buttons across the app help new users with detailed explanations.</string>
    <string name="settings_featureRoutingSummary">Routing Summary</string>
    <string name="settings_featureRoutingSummary_summary">Provides access to all routing events along with a routing summary.</string>
    <string name="settings_featureContacts_summary">Make sending money a breeze with a neatly organized contact list.</string>
    <string name="settings_featureSignVerify_summary">Allows to sign and verify messages with your node.</string>
    <string name="settings_exchangeRateProvider">Exchange Rate Provider</string>
    <string name="settings_custom_exchange_rate_provider">Custom Exchange Rate Provider</string>
    <string name="settings_feeEstimationProvider">Fee Estimation</string>
    <string name="settings_custom_fee_estimation_provider">Custom Fee Estimation</string>
    <string name="settings_lnRequestExpiryTitle">Lightning Request Expiry</string>
    <string name="settings_lnFeeLimitTitle">Lightning Payment Fee Limit</string>
    <string name="settings_unspecifiedAmountInvoices">Allow invoices without specific amount</string>
    <string name="settings_stealth_mode">Stealth Mode</string>
    <string name="settings_stealth_mode_summary">Enable stealth mode to protect against physical searches of your device</string>
    <string name="settings_backendTimeout">Backend timeout</string>
    <string name="settings_backendTimeout_dialogMessage">Specifies the number of seconds the app will wait for a backend response. If no response arrives before this time elapses, the request fails. For slow internet connections, consider increasing this limit. When using Tor, the app multiplies this number by 3 to account for Tor\’s latency.</string>
    <string name="settings_paymentTimeout">Payment timeout</string>
    <string name="settings_paymentTimeout_dialogMessage">This setting defines the maximum number of seconds the app will spend attempting a Lightning payment. If no route is found within that time, the payment is canceled. If you often see timeouts, try increasing this limit.</string>
    <string name="help_dialog_base_fee">Regardless of the transaction\'s value, you\'ll receive a set base fee for every transaction you forward through the channel. Your total received fee is the sum of this base fee and the fee rate.</string>
    <string name="help_dialog_fee_rate">The fee rate is a fee that scales with the value of the transaction you forward through the channel. Your total received fee is the sum of this fee rate and the base fee.</string>
    <string name="help_dialog_minHTLC">The smallest value you are willing to forward on this channel in a single transaction.\n\nKeep this field empty if you don\'t want to change the current set value.</string>
    <string name="help_dialog_maxHTLC">The maximum value you are willing to forward on this channel in a single transaction.\n\nKeep this field empty if you don\'t want to change the current set value.</string>
    <string name="host">Host</string>
    <string name="lnurl_payer_data_name">Name</string>
    <string name="lnurl_payer_data_identifier">Lightning Address</string>
    <string name="lnurl_payer_data_identifier_explanation">A lightning address is like an email address, but for Bitcoin!</string>
    <string name="lnurl_payer_data_email">Email</string>
    <string name="drawer_menu_contacts">Contacts</string>
    <string name="sign_verify">Sign/Verify</string>
    <string name="fee_base">Base Fee</string>
    <string name="fee_rate">Fee Rate</string>
    <string name="timelock_delta">Timelock Delta</string>
    <string name="htlc_min">Min HTLC</string>
    <string name="htlc_max">Max HTLC</string>
    <string name="submit_routing_policy">Update Routing Policy</string>
    <string name="routing_policy_applies_for_all_channels">Attention! If submitted, these settings will be applied to all of your channels!</string>
    <string name="explanation_timelock_delta">In a payment route, each intermediate step defines a specific time window (in blocks) within which it must successfully process the transaction. Otherwise, it will be considered failed due to expiration. In case of payment failures or uncooperative behavior, this time window is crucial because it allows participants at that step to take necessary actions, such as cooperatively reversing the transaction (unwinding the HTLC) or uncooperatively settling it on the blockchain.\n\nA higher value in this context enhances the channel\'s resilience against temporary node failures. However, it could potentially reduce the attractiveness of the channel for routing because, in the worst-case scenario, payments might experience prolonged delays. Additionally, in rare cases of stuck payments, the funds of the channel participants allocated to that forwarding event will be locked up for the duration of this time window.\n\n144 blocks is about one day.</string>
    <string name="sort_by_name_asc">Name (A-Z)</string>
    <string name="sort_by_name_desc">Name (Z-A)</string>
    <string name="sort_by_capacity_asc">Capacity (smallest first)</string>
    <string name="sort_by_capacity_desc">Capacity (largest first)</string>
    <string name="sort_by_inbound_capacity_asc">Receiving Capacity (smallest first)</string>
    <string name="sort_by_inbound_capacity_desc">Receiving Capacity (largest first)</string>
    <string name="sort_by_outbound_capacity_asc">Sending Capacity (smallest first)</string>
    <string name="sort_by_outbound_capacity_desc">Sending Capacity (largest first)</string>
    <string name="sort_by_symmetry_asc">Symmetry (imbalanced first)</string>
    <string name="sort_by_symmetry_desc">Symmetry (balanced first)</string>
    <string name="sort_by_age_asc">Age (newest first)</string>
    <string name="sort_by_age_desc">Age (oldest first)</string>
    <string name="sort_by_value_asc">Value (smallest first)</string>
    <string name="sort_by_value_desc">Value (largest first)</string>
</resources>