<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="Mempool.space"
            android:dialogTitle="@string/settings_blockExplorer"
            android:entries="@array/blockExplorerDisplayValues"
            android:entryValues="@array/blockExplorer"
            android:key="blockExplorer"
            android:summary="%s"
            android:title="@string/settings_blockExplorer"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToCustomBlockExplorerSettings"
            android:title="@string/settings_custom_block_explorer"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="Blockchain.info"
            android:dialogTitle="@string/settings_exchangeRateProvider"
            android:entries="@array/exchangeRateProviderDisplayValues"
            android:entryValues="@array/exchangeRateProvider"
            android:key="exchangeRateProvider"
            android:summary="%s"
            android:title="@string/settings_exchangeRateProvider"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToCustomExchangeRateProviderSettings"
            android:title="@string/settings_custom_exchange_rate_provider"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="Internal"
            android:dialogTitle="@string/settings_feeEstimationProvider"
            android:entries="@array/feeEstimationProviderDisplayValues"
            android:entryValues="@array/feeEstimationProvider"
            android:key="feeEstimationProvider"
            android:summary="%s"
            android:title="@string/settings_feeEstimationProvider"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToCustomFeeEstimationProviderSettings"
            android:title="@string/settings_custom_fee_estimation_provider"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/settings_backendTimeout_dialogMessage"
            android:key="backendTimeout"
            android:title="@string/settings_backendTimeout"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/onChain"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="bech32m"
            android:dialogTitle="@string/settings_addressType"
            android:entries="@array/settings_receiveAddressDisplayValues"
            android:entryValues="@array/addressType"
            android:key="btcAddressType"
            android:summary="%s"
            android:title="@string/settings_addressType"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lightning"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="86400"
            android:entryValues="@array/lnRequestExpiry"
            android:key="lightning_expiry"
            android:summary="%s"
            android:title="@string/settings_lnRequestExpiryTitle"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="1%"
            android:entries="@array/lnFeeLimit"
            android:entryValues="@array/lnFeeLimit"
            android:key="lightning_feeLimit"
            android:summary="%s"
            android:title="@string/settings_lnFeeLimitTitle"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="unspecifiedAmountInvoices"
            android:title="@string/settings_unspecifiedAmountInvoices"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToPayerDataSettings"
            android:title="@string/settings_payer_data"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/settings_paymentTimeout_dialogMessage"
            android:key="paymentTimeout"
            android:title="@string/settings_paymentTimeout"
            app:iconSpaceReserved="false" />

        <!--
        This should be on in 99% of cases, so we do not expose it for now.
        <SwitchPreference
            android:defaultValue="true"
            android:key="includePrivateChannelHints"
            android:title="@string/settings_lnPrivateChannelHints"
            app:iconSpaceReserved="false" />
        -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_security"
        app:iconSpaceReserved="false">

        <Preference
            android:key="goToDecoyAppSettings"
            android:summary="@string/settings_stealth_mode_summary"
            android:title="@string/settings_stealth_mode"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preventScreenRecording"
            android:title="@string/settings_preventScreenRecording"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="resetGuardian"
            android:title="@string/settings_resetSecurityWarnings"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
