<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@null"
    android:key="topPrefScreen"
    android:title="@string/navigation_settings">

    <PreferenceCategory
        android:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="ccSAT"
            android:dialogTitle="@string/settings_btcUnit"
            android:entries="@array/btcUnitDisplayValues"
            android:entryValues="@array/btcCurrencyCodes"
            android:key="firstCurrency"
            android:summary="%s"
            android:title="@string/settings_btcUnit"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="USD"
            android:dialogTitle="@string/settings_currency"
            android:entries="@array/currency"
            android:entryValues="@array/currency"
            android:key="secondCurrency"
            android:summary="%s"
            android:title="@string/settings_currency"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="system"
            android:dialogTitle="@string/settings_language"
            android:entries="@array/languageDisplayValues"
            android:entryValues="@array/languageValues"
            android:key="language"
            android:summary="%s"
            android:title="@string/settings_language"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="scanClipboard"
            android:summary="@string/settings_scan_clipboard_summary"
            android:title="@string/settings_scan_clipboard"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToPayerDataSettings"
            android:title="@string/settings_payer_data"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/settings_category_security"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pinPref"
            android:title="@string/settings_addPin"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="off"
            android:dialogTitle="@string/settings_hideBalance"
            android:entries="@array/hideBalanceTypeDisplayValues"
            android:entryValues="@array/hideBalanceType"
            android:key="hideBalanceType"
            android:summary="%s"
            android:title="@string/settings_hideBalance"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="isTorEnabled"
            android:summary="@string/settings_tor_summary"
            android:title="@string/settings_tor"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_advanced"
        app:iconSpaceReserved="false">

        <Preference
            android:key="goToAdvanced"
            android:title="@string/settings_advanced_settings"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory
        android:key="devCategory"
        android:title="Development"
        app:iconSpaceReserved="false">

        <Preference
            android:key="resetAll"
            android:title="Reset APP"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="goToTests"
            android:title="Automated Tests"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>